--- a/presentation/sections/thue-morse.tex
+++ b/presentation/sections/thue-morse.tex
@@ -1,7 +1,7 @@
 \section{Thue Morse Subshift}
 
 \begin{frame}
-	Let $\sigma$ be the left shift on $\{0, 1\}^\mathbb{Z}$. Then $(\{0, 1\}^\mathbb{Z}, \sigma)$ is a TDS.
+	Let $\sigma$ be the left shift on $\{0, 1\}^\mathbb{Z}$. Then $(\{0, 1\}^\mathbb{Z}, \sigma)$ is a TDS.\pause
 	\begin{columns}
 		\begin{column}{.5\textwidth}
 			\begin{example}[Thue Morse Subshift]
@@ -11,12 +11,12 @@
 						0 \mapsto 01\\
 						1 \mapsto 10
 					\end{dcases}.
-				\end{align*}
+				\end{align*}\pause
 				It has a unique fix point $v \in \{0, 1\}^\mathbb{Z}$ and gives a minimal subshift
 				\begin{align*}
 					X := \overline{\{\sigma^nv;\ n \in \mathbb{Z}\}}.
 				\end{align*}
-			\end{example}
+			\end{example}\pause
 		\end{column}
 		\begin{column}{.5\textwidth}
 			\begin{example}[Period Doubling Subshift]
@@ -26,12 +26,12 @@
 						0 \mapsto 01\\
 						1 \mapsto 00
 					\end{dcases}.
-				\end{align*}
+				\end{align*}\pause
 				It has a unique fix point $w \in \{0, 1\}^\mathbb{Z}$ and gives a minimal subshift
 				\begin{align*}
 					Y := \overline{\{\sigma^nw;\ n \in \mathbb{Z}\}}.
 				\end{align*}
-			\end{example}
+			\end{example}\pause
 		\end{column}
 	\end{columns}
 	\medskip
@@ -48,15 +48,15 @@
 
 \begin{frame}
 	\frametitle{Dyadic Odometer}
-	The dyadic integer are given by
+	The dyadic integers are given by
 	\begin{align*}
 		\mathbb{Z}_2 &:= \varprojlim_{k \to \infty} \mathbb{Z}/2^k\mathbb{Z}\\
 		&= \{(a_k + 2^k\mathbb{Z})_{k \in \mathbb{N}} \in \prod_{k \in \mathbb{N}} (\mathbb{Z}/2^k\mathbb{Z});\ a_{k+1} + 2^k\mathbb{Z} = a_k + 2^k\mathbb{Z}\}\\
 		&\cong \{(a_k)_{k \in \mathbb{N}} \in \prod_{k \in \mathbb{N}} \{0, \dots, 2^k-1\};\ a_{k+1} \in \{a_k, a_k + 2^k\}\}.
-	\end{align*}
-	Equipped with wise addition they form a compact abelian group.
+	\end{align*}\pause
+	Equipped with wise addition they form a compact abelian group.\pause
 	
-	Define $\eta := (1, 1, \dots) \in \mathbb{Z}_2$ and define $d: \mathbb{Z}_2 \to \mathbb{Z}_2$ by $d(a) := a + \eta$. Then $(\mathbb{Z}, d)$ is a minimal equicontinuous TDS called the \textbf{dyadic odometer}.
+	Define $\eta := (1, 1, \dots) \in \mathbb{Z}_2$ and define $d: \mathbb{Z}_2 \to \mathbb{Z}_2$ by $d(a) := a + \eta$.\pause Then $(\mathbb{Z}, d)$ is a minimal equicontinuous TDS called the \textbf{dyadic odometer}.
 \end{frame}
 
 \begin{frame}
@@ -67,10 +67,10 @@
 			0 &; \max\{k \in \mathbb{N}|\ 2^k | n\} \text{ is even}\\
 			1 &; \max\{k \in \mathbb{N}|\ 2^k | n\} \text{ is odd}
 		\end{dcases}.
-	\end{align*}
+	\end{align*}\pause
 	\medskip
 	
-	There is a unique a map $\rho: Y \to \mathbb{Z}_2$ such that for $ s = (s_n)_{n \in \mathbb{Z} \in Y}$ the entry $\rho(s)_m$ is the unique integer in $\{0, \dots, 2^m-1\}$ such that
+	There is a unique a map $\rho: Y \to \mathbb{Z}_2$ such that for $ s = (s_n)_{n \in \mathbb{Z}} \in Y$ the entry $\rho(s)_m$ is the unique integer in $\{0, \dots, 2^m-1\}$ such that
 	\begin{align*}
 		s_n =
 		\begin{dcases}
@@ -78,10 +78,10 @@
 			1 &; \max\{k \in \mathbb{N};\ 2^k | n + \rho(s)_m\} \text{ is odd}
 		\end{dcases}
 	\end{align*}
-	holds for all $n \in \{\pm 1, \dots, \pm m\}$. This is well defined.
+	holds for all $n \in \{\pm 1, \dots, \pm m\}$. This is well defined.\pause
 	\medskip
 	
-	Clearly $\rho(w) = (0, 0, \dots)$. Also
+	Clearly $\rho(w) = (0, 0, \dots)$.\pause Also
 	\begin{align*}
 		(\sigma w)_n = w_{n+1} =
 		\begin{dcases}
@@ -89,7 +89,7 @@
 			1 &; \max\{k \in \mathbb{N};\ 2^k | n+1\} \text{ is odd}
 		\end{dcases},
 	\end{align*}
-	so $\rho(\sigma w) = (1, 1, \dots ) = (0, 0, \dots) + \eta = d(\rho(w))$.
+	so $\rho(\sigma w) = (1, 1, \dots ) = (0, 0, \dots) + \eta = d(\rho(w))$.\pause
 	
 	In fact $\rho$ is a factor map and it is at most $2$-to-$1$.
 \end{frame}
@@ -106,10 +106,10 @@
 			\rho: &\downarrow &\\
 			\text{dyadic odometer:} &\quad (\mathbb{Z}_2, d) \quad &\text{equicontinuous.}
 		\end{array}
-	\end{align*}
+	\end{align*}\pause
 	\medskip
 
-	In particular $(\mathbb{Z}_2, d)$ is the MEF of $(X, \sigma)$ and $(Y, \sigma)$. Also $(Y, \sigma)$ is a $3$-MEF of $(X, \sigma)$.
+	In particular $(\mathbb{Z}_2, d)$ is the MEF of $(X, \sigma)$ and $(Y, \sigma)$. Also $(Y, \sigma)$ is a $3$-MEF of $(X, \sigma)$.\pause
 	
 	Note that however the MEF of $(\{0, 1\}^\mathbb{Z}, \sigma)$ is trivial.
 \end{frame}
