--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -87,11 +87,11 @@ style=authoryear,
     \end{frame}
 \endgroup
 
-%\subfile{sections/equicontinuity.tex}
-%\subfile{sections/mef.tex}
-%\subfile{sections/rpr.tex}
-%\subfile{sections/skew-rotation.tex}
-%\subfile{sections/meq.tex}
+\subfile{sections/equicontinuity.tex}
+\subfile{sections/mef.tex}
+\subfile{sections/rpr.tex}
+\subfile{sections/skew-rotation.tex}
+\subfile{sections/meq.tex}
 \subfile{sections/thue-morse.tex}
 
 \section*{}
