corrected some mistakes

--- a/presentation/sections/equicontinuity.tex
+++ b/presentation/sections/equicontinuity.tex
@@ -86,7 +86,7 @@
 		\end{remark}}
 		\only<3-4>{
 		\begin{proposition}
-			Let $d, \tilde{d}$ be two metrics on $X$, that induce the same topology. Then $(x, T)$ is equicontinuous with respect to $d$ if and only if it is equicontinuous with respect to $\tilde{d}$.
+			Let $d, \tilde{d}$ be two metrics on $X$, that induce the same topology. Then $(X, T)$ is equicontinuous with respect to $d$ if and only if it is equicontinuous with respect to $\tilde{d}$.
 		\end{proposition}}
 		\only<4>{
 		\begin{proposition}
