--- a/presentation/sections/skew-rotation.tex
+++ b/presentation/sections/skew-rotation.tex
@@ -24,7 +24,7 @@
 			
 			\onslide<9->\draw[ultra thick, color=orange] (.347, 1.970) arc (80:100:2) node[below, midway, scale=1.5] {$\delta_1$};
 			\onslide<10->\draw[ultra thick, color=orange] (-1.732, 1) arc(150:170:2) node[right, midway, scale=1.5] {$\delta_1$};
-			\onslide<14>\draw[ultra thick, color=orange] (-1.532, -1.286) arc(220:240:2) node[above, scale=1.5] {$\delta_1$};
+			\onslide<14->\draw[ultra thick, color=orange] (-1.532, -1.286) arc(220:240:2) node[above, scale=1.5] {$\delta_1$};
 			
 			
 			\onslide<1->\draw[ultra thick] (2.5, .25) -- (3, -.25);
@@ -89,12 +89,12 @@
 	\end{align*}
 	\begin{overlayarea}{\textwidth}{2cm}
 	\begin{minipage}{\textwidth}
-		\only<2-6>{
+		\only<2-6, 12>{
 		\begin{definition}[Regional Proximal]
 			Two points $x,y \in X$ are called \emph{regionally proximal}
 			if for each $\varepsilon > 0$ there exist $x' \in B_\varepsilon(x), y' \in B_\varepsilon(y)$ and $t \in T$ such that $d(tx', ty') < \varepsilon$.
 		\end{definition}}
-		\only<7->{
+		\only<7-11>{
 		\begin{remark}
 			Note that for $([z], [x]) \in \mathbb{T}^2$ and $n \in \mathbb{N}$ we have
 			\begin{align*}
