small changes to mef part

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -16,8 +16,7 @@
 \usepackage{tikz}
 \usetikzlibrary{cd,calc}
 \usepackage{pgfplots}
-%\pgfplotsset{compat=1.18} % or your version # this breaks beamer (contents stuff and causes error)
-
+\pgfplotsset{compat=1.18}
 
 \tikzcdset{every label/.append style = {font = \small}}
 \numberwithin{equation}{section}
