--- a/references.bib
+++ b/references.bib
@@ -1,41 +1,30 @@
-@article{OpmeerCurtain2004,
-author = {Opmeer, Mark R. and Curtain, Ruth F.},
-title = {Linear Quadratic Gaussian Balancing for Discrete-Time Infinite-Dimensional Linear Systems},
-journal = {SIAM Journal on Control and Optimization},
-volume = {43},
-number = {4},
-pages = {1196-1221},
-year = {2004},
-}
-
 @Article{HK2023,
 author={Hermle, Patrick
 and Kreidler, Henrik},
 title={A Halmos--von Neumann Theorem for Actions of General Groups},
 journal={Applied Categorical Structures},
 year={2023},
-month={Sep},
-day={08},
-volume={31},
-number={5},
-pages={38},
-issn={1572-9095},
-doi={10.1007/s10485-023-09743-y},
-url={https://doi.org/10.1007/s10485-023-09743-y}
 }
+
+@article{Furstenberg,
+author = {Furstenberg, H.},
+title = {Strict Ergodicity and Transformation of the Torus},
+journal = {American Journal of Mathematics},
+year = {1961},
+}
+
+
 
 @ARTICLE{Garcia-Ramos2024,
   title         = "Coincidence rank and multivariate equicontinuity",
   author        = "Garc{\'\i}a-Ramos, Felipe and Le{\'o}n-Torres, Irma",
   year          =  2024,
   archivePrefix = "arXiv",
-  primaryClass  = "math.DS",
-  eprint        = "2411.03529"
 }
 
 @book{Auslaner,
   title="Minimal Flows and their Extensions",
   author="Joseph Auslander",
   year="1988",
-  publisher = {Noth-Holland},
+  publisher = {North-Holland},
 }
