reverted accidental comment

--- a/presentation/tikz/rpr-ex0.tex
+++ b/presentation/tikz/rpr-ex0.tex
@@ -27,7 +27,7 @@
 
     % Plot for x=0.5
     \addplot[red, thick] {1/(1 + ((1/\xB)-1)*exp(-x))};
-    %\addlegendentry{$x=0.5$}
+    \addlegendentry{$x=0.5$}
     \draw[red, dotted] (axis cs:0,0) -- (axis cs:0,\xB);
     \draw[red, dotted] (axis cs:0,\xB) -- (axis cs:5,\xB);
 
