--- a/references.bib
+++ b/references.bib
@@ -15,11 +15,12 @@ year = {1961},
 
 
 
-@ARTICLE{Garcia-Ramos2024,
+@misc{Garcia-Ramos2024,
   title         = "Coincidence rank and multivariate equicontinuity",
   author        = "Garc{\'\i}a-Ramos, Felipe and Le{\'o}n-Torres, Irma",
   year          =  2024,
-  archivePrefix = "arXiv",
+  eprint={2411.03529},
+  archivePrefix={arXiv},
 }
 
 @book{Auslaner,
@@ -27,4 +28,13 @@ year = {1961},
   author="Joseph Auslander",
   year="1988",
   publisher = {North-Holland},
+}
+
+@BOOK{OpThErg,
+  title     = "Operator theoretic aspects of ergodic theory",
+  author    = "Eisner, Tanja and Farkas, B{\'a}lint and Haase, Markus and
+               Nagel, Rainer",
+  publisher = "Springer",
+  series    = "Graduate Texts in Mathematics",
+  year      =  2015,
 }
