--- a/presentation/sections/meq.tex
+++ b/presentation/sections/meq.tex
@@ -27,7 +27,7 @@
     As before, we have:
     \begin{remark}
         Any $m$-MEF is also an $m'$-MEF for all $m' > m$
-        since the $B_i$ in the definition of an $m$-MEF need not be pairwise distinct
+        since the $B_i$ in the definition of an $m$-MEF need not be pairwise distinct.
     \end{remark}
 \end{frame}
 
