--- a/presentation/sections/rpr.tex
+++ b/presentation/sections/rpr.tex
@@ -71,8 +71,8 @@ Not transitive in general! See Example.
   \end{align*}
   }%
   \only<2->{%
-  Every point greater $0$ tends to $1$ with $t \to \infty$
-  and every point greater $1$ tends to $2$.
+  Every point greater $0$ and smaller $1$ tends to $1$ 
+  and every point greater $1$ tends to $2$ with $t \to \infty$.
   }
 
   \only<3->{%
@@ -93,7 +93,7 @@ Not transitive in general! See Example.
     But $(0, 2)$ is not a regionally proximal pair.
 
     \column{0.5\textwidth}
-    For $1$ and $2$ we have:
+    For $0$ and $1$ we have:
     \include{tikz/rpr-ex1}
     With $t$ large enough:
     \include{tikz/rpr-ex2}
@@ -153,7 +153,7 @@ The equicontinuous factor is the identity map with $\Delta(X)$ as ICER.
       $(X, T)$ equicontinuous
       \vspace{2em}
       \begin{enumerate}
-        \item MEF is the identity map, biggest possible subsystem
+        \item MEF is the identity map, biggest possible factor
         \only<2->{\item $Q_2(X) = \Delta(X)$, smallest possible reflexive relation}
       \end{enumerate}
     \end{center}
@@ -163,7 +163,7 @@ The equicontinuous factor is the identity map with $\Delta(X)$ as ICER.
       $(X, T)$ weakly mixing
       \vspace{2em}
       \begin{enumerate}
-        \item MEF is one-point system, smallest possible subsystem
+        \item MEF is one-point system, smallest possible factor
         \only<2->{\item $Q_2(X) = X \times X$, biggest possible relation}
       \end{enumerate}
     \end{center}
