--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -71,7 +71,7 @@ style=authoryear,
 
 \title[Maximal Equicontinuous Factor]{Project 8: Maximal Equicontinuous Factor}
 \author{Matti Bleckmann, Jannik Daun, Pablo Lummerzheim}
-%\institute{}
+\institute{Coordinator: Lino Haupt}
 \date{ISEM28, 2025}
 
 \begin{document}
@@ -96,12 +96,7 @@ style=authoryear,
 \section*{}
 \begingroup 
     \setbeamertemplate{headline}{}
-\begin{frame}{Conclusion}
-    \begin{itemize}
-    \item ...
-    \end{itemize}
-    %\pause
-    \hrule
+\begin{frame}{}
     \begin{center}
 \Large
     Thanks for your attention!
