--- a/presentation/sections/rpr.tex
+++ b/presentation/sections/rpr.tex
@@ -104,7 +104,7 @@ Not transitive in general! See Example.
 \begin{frame}
 \begin{proposition}
   \label{prop:phiSqQ2XcQ2Y}
-  Let $\varphi : (X,T) \to (Y,T)$ a morphism of TDS. Then $(\varphi \times \varphi) (Q_2 (X)) \subset Q_2(Y)$.
+  Let $\varphi : (X,T) \to (Y,T)$ a factor. Then $(\varphi \times \varphi) (Q_2 (X)) \subset Q_2(Y)$.
 \end{proposition}
 \pause
 \begin{theorem}
@@ -131,7 +131,7 @@ The equicontinuous factor is the identity map with $\Delta(X)$ as ICER.
 
 \begin{frame}
   But first:
-  \begin{definition}[weakly mixing]
+  \begin{definition}[topologically weakly mixing]
     Let $(X,T)$ be a TDS. Then $(X,T)$ is called \emph{weakly mixing} if and only if every non-empty, $T$-invariant and open $U\subset X \times X$ is dense in $X \times X$.
   \end{definition}
   \pause
