--- a/presentation/tikz/rpr-ex0.tex
+++ b/presentation/tikz/rpr-ex0.tex
@@ -4,7 +4,7 @@
       domain==3:3,
       samples=100,
       xlabel={$t$},
-      ylabel={$f(t)$},
+      ylabel={$tx$},
       grid=major,
       ymin=0, ymax=1.1,
       legend pos=south east,
